--- a/一个简单的html&css例子/index.html
+++ b/一个简单的html&css例子/index.html
@@ -29,7 +29,21 @@
 	&lt;title>Document&lt;/title&gt;
 &lt;/head&gt;
 &lt;body&gt;
-	
+	&lt;h2&gt;this is a web page.&lt;/h2&gt;
+	&lt;p&gt;Lorem ipsum dolor sit amet,
+	consectetur adipisicing elit. 
+	Dolores reprehenderit totam laudantium
+	quis provident neque quaerat, temporibus.
+	Recusandae dolorum dolorem blanditiis ipsam,
+	corporis voluptate quidem facere,
+	harum doloremque voluptas nam.&lt;/p&gt;
+	&lt;p&gt;Lorem ipsum dolor sit amet,
+	consectetur adipisicing elit. 
+	Dolores reprehenderit totam laudantium
+	quis provident neque quaerat, 
+	temporibus. Recusandae dolorum dolorem 
+	blanditiis ipsam, corporis voluptate quidem 
+	facere, harum doloremque voluptas nam.&lt;/p&gt;
 &lt;/body&gt;
 &lt;/html&gt;
 </pre>
